--- a/HTML-CSS/1-login-page/style.css
+++ b/HTML-CSS/1-login-page/style.css
@@ -1,6 +1,3 @@
-/* width-1536
-   height 1042
-*/
 * {
   box-sizing: border-box;
   margin: 0;
@@ -13,158 +10,157 @@ main {
   flex-direction: row;
   width: 100%;
   height: 100vh;
+}
 
-  .sign-up-box {
-    flex: 503;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
+.sign-up-box {
+  flex: 503;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
 
-    .sign-up-info {
-      display: flex;
-      flex-direction: column;
-      h1 {
-        font-size: 32px;
-        font-weight: 500;
-        margin-bottom: 50px;
-      }
-      form {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+.sign-up-info {
+  display: flex;
+  flex-direction: column;
+}
+h1 {
+  font-size: 32px;
+  font-weight: 500;
+  margin-bottom: 50px;
+}
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
-        .sign-up-input {
-          display: flex;
-          flex-direction: column;
-          margin-bottom: 15px;
-          width: 100%;
+.sign-up-input {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
+  width: 100%;
+}
 
-          label {
-            font-size: 14px;
-            font-weight: 400;
-            margin-bottom: 3px;
-          }
+label {
+  font-size: 14px;
+  font-weight: 400;
+  margin-bottom: 3px;
+}
 
-          input {
-            height: 32px;
-            border: 1px solid #9999998f;
-            border-radius: 10px;
-            padding-left: 10px;
-          }
+input {
+  height: 32px;
+  border: 1px solid #9999998f;
+  border-radius: 10px;
+  padding-left: 10px;
+}
 
-          input::placeholder {
-            color: #999;
-            font-size: 10px;
-          }
-        }
+input::placeholder {
+  color: #999;
+  font-size: 10px;
+}
 
-        .sign-up-term {
-          width: 143px;
-          height: 15.32px;
-          margin-bottom: 20px;
-          align-self: flex-start;
+.sign-up-term {
+  width: 143px;
+  height: 15.32px;
+  margin-bottom: 20px;
+  align-self: flex-start;
+}
 
-          .sign-up-term-checkbox {
-            width: 9px;
-            height: 9px;
-          }
-          .sign-up-term-text {
-            font-size: 9px;
+.sign-up-term-checkbox {
+  width: 9px;
+  height: 9px;
+}
+.sign-up-term-text {
+  font-size: 9px;
+}
 
-            a {
-              color: black;
-            }
-          }
-        }
+.link-term {
+  color: black;
+}
 
-        button {
-          height: 35px;
-          width: 100%;
-          background-color: rgb(67, 90, 14);
-          color: white;
-          font-weight: 700;
-          border-radius: 10px;
-          border: 0;
-        }
+a:hover {
+  color: blue;
+}
 
-        .divider {
-          height: 2px;
-          width: 100%;
-          background-color: #f5f5f5;
-          margin: 40px 0px 40px 0px;
-          position: relative;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          border-radius: 5px;
+button {
+  height: 35px;
+  width: 100%;
+  background-color: rgb(27, 90, 14);
+  color: white;
+  font-weight: 700;
+  border-radius: 10px;
+  border: 0;
+}
 
-          p {
-            font-size: 9px;
-            position: absolute;
-            background-color: white;
-            border-radius: 100%;
-            padding: 6px;
-          }
-        }
+button:hover {
+  background-color: rgba(27, 90, 14, 0.856);
+  box-shadow: 0 2px 8px rgba(27, 90, 14, 0.25);
+  cursor: pointer;
+}
 
-        .sign-in-social {
-          display: flex;
-          flex-direction: row;
-          gap: 30px;
+.divider {
+  height: 2px;
+  width: 100%;
+  background-color: #f5f5f5;
+  margin: 40px 0px 40px 0px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+}
 
-          .google-login,
-          .apple-login {
-            font-size: 12px;
-            color: black;
-            text-decoration: none;
-            border: 1px solid #d6d6d6;
-            height: 32px;
-            width: 190px;
-            border-radius: 30px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 5px;
+.divider-text {
+  font-size: 9px;
+  position: absolute;
+  background-color: white;
+  border-radius: 100%;
+  padding: 6px;
+}
 
-            &::before {
-                content: "";
-                display: block;
-                width: 18px;   
-                height: 18px;
-                background-size: cover;
-                background-repeat: no-repeat;
-              }
-          }
-          .google-login::before {
-            background-image: url("icons/icons8-google1.png");
-          }
-        
-          .apple-login::before {
-            background-image: url("icons/icons8-apple-logo1.png");
-          }
-        }
-        .have-account {
-            margin-top: 20px;
-            font-size: 14px;
-        }
-      }
-    }
-  }
+.sign-in-social {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+}
 
-  .sign-up-image-box {
-    display: flex;
-    flex: 521;
+.google-login,
+.apple-login {
+  font-size: 12px;
+  color: black;
+  text-decoration: none;
+  border: 1px solid #d6d6d6;
+  height: 32px;
+  width: 190px;
+  border-radius: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+}
 
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      border-radius: 30px 0 0 30px;
-      box-shadow: 8px 8px 20px rgba(0, 0, 0, 0.25);
-    }
-  }
-  
+.google-login:hover,
+.apple-login:hover {
+  color: black;
+  box-shadow: 0 2px 8px rgba(27, 90, 14, 0.25);
+}
+
+.have-account {
+  margin: 20px;
+  font-size: 14px;
+}
+
+.sign-up-image-box {
+  display: flex;
+  flex: 521;
+  justify-content: end;
+}
+
+.leaf-img {
+  object-fit: cover;
+  border-radius: 30px 0 0 30px;
+  box-shadow: 8px 8px 20px rgba(0, 0, 0, 0.25);
 }
